; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_table.c_uiTableAppendImageTextColumn.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_table.c_uiTableAppendImageTextColumn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @uiTableAppendImageTextColumn(i32* %0, i8* %1, i32 %2, i32 %3, i32 %4, i32* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  store i32* %0, i32** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32* %5, i32** %12, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = call i32* @addColumn(i32* %14, i8* %15)
  store i32* %16, i32** %13, align 8
  %17 = load i32*, i32** %7, align 8
  %18 = load i32*, i32** %13, align 8
  %19 = load i32, i32* %9, align 4
  %20 = call i32 @addImageColumn(i32* %17, i32* %18, i32 %19)
  %21 = load i32*, i32** %7, align 8
  %22 = load i32*, i32** %13, align 8
  %23 = load i32, i32* %10, align 4
  %24 = load i32, i32* %11, align 4
  %25 = load i32*, i32** %12, align 8
  %26 = call i32 @addTextColumn(i32* %21, i32* %22, i32 %23, i32 %24, i32* %25)
  ret void
}

declare dso_local i32* @addColumn(i32*, i8*) #1

declare dso_local i32 @addImageColumn(i32*, i32*, i32) #1

declare dso_local i32 @addTextColumn(i32*, i32*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
